platform_versioned_docs/version-4.5.0/_partials/cluster/connect-helm.mdx
import Flow, { Step } from '@site/src/components/Flow'
import NavStep from '@site/src/components/NavStep'
import Button from '@site/src/components/Button'
import Label from '@site/src/components/Label'
import Input from '@site/src/components/Input'
import Expander from '@site/src/components/Expander'

<Flow id="cluster-connect-helm">
  <Step>
    If you prefer to use Helm, you need to make sure that you have a valid Access Key.

    You can either reuse the CLI Access Key or create a new one by following the
    [Access Key guide](../../administer/users-permissions/access-keys.mdx#create-an-access-key).


    - Reusing the CLI Access Key

      ```bash
      export ACCESS_KEY=$(vcluster platform access-key | jq -r .status.token)
      ```

    - Create new Access Key by following the [Access
    Key](/platform/administer/users-permissions/access-keys#create-an-access-key) guide.

      ```bash
      export ACCESS_KEY="[Newly Created Access Key]"
      ```
  </Step>
  <Step>
    After that, you need to provide a name for the cluster.

    ```bash
    export CLUSTER_NAME="cluster-name"
    ```
  </Step>
  <Step>
    Next, you must create the `Cluster` custom resource within the platform using the following code:

    ```bash
    cat <<EOF | kubectl apply -f -
    apiVersion: management.loft.sh/v1
    kind: Cluster
    metadata:
      name: $CLUSTER_NAME
    spec:
      displayName: $CLUSTER_NAME
      networkPeer: true
      managementNamespace: vcluster-platform
    EOF
    ```
  </Step>
  <Step>
    Then, you need to set the Platform Host using the following code:

    ```bash
    export PLATFORM_HOST="YOUR_PLATFORM_HOST"
    ```
  </Step>
  <Step>
    To get the Platform version, you should run the following command:

    ```bash
    export PLATFORM_VERSION=$(curl -s "https://$PLATFORM_HOST/version" | jq -r '.version | .[0:]')
    ```
  </Step>
  <Step>
    To get the Cluster Connect token, you should run the following command:

    ```bash
    export CLUSTER_ACCESS_KEY=$(curl -s "https://$PLATFORM_HOST/kubernetes/management/apis/management.loft.sh/v1/clusters/$CLUSTER_NAME/accesskey" -H "Authorization: bearer $ACCESS_KEY")
    ```
  </Step>
  <Step>
    Finally, you can connect the cluster using the following command:

    ```bash
    helm upgrade loft vcluster-platform --install \
      --repo https://charts.loft.sh/ \
      --version $PLATFORM_VERSION \
      --namespace vcluster-platform \
      --create-namespace \
      --set agentOnly=true \
      --set url=https://$PLATFORM_HOST \
      --set token=$(echo $CLUSTER_ACCESS_KEY | jq -r .accessKey) \
      --set additionalCA=$(echo $CLUSTER_ACCESS_KEY | jq -r .caCert) \
      --set insecure=$(echo $CLUSTER_ACCESS_KEY | jq -r .insecure)
    ```

    This command automatically installs the [vCluster Platform Agent](/docs/platform/administer/clusters/advanced/agent-config) in the cluster that is your current context.
    However, if you want to connect a cluster that is not your current context, you can append the `--kube-context` flag to specify the context of the cluster you want to connect.

    You can also retrieve pre-configured agent values from your platform by appending the `--values` flag with the platform endpoint `--values "https://$HOST/clusters/agent-values/$CLUSTER_NAME?token=$TOKEN"`.
    - `$HOST` — your vCluster Platform domain
    - `$CLUSTER_NAME` — the name you're assigning to the cluster being connected (e.g., `cluster-name`)
    - `$TOKEN` — the authentication token to access your vCluster Platform
    The endpoint returns an intelligently merged content of
    - Platform-level defaults configured in the `agentValues` field of your vCluster Platform Helm values
    - Cluster-specific overrides from the `loft.sh/agent-values` annotation (when present)

  </Step>
</Flow>